2011-07-31  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtkStuff.R (getWidget): Added generics to process $, [[ and
	[[<- calls for working with undelrying RGtk2 widget.

2011-07-30  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggrid.R (addTreeViewColumnNoEdit): took out needless call to
	rownames (was giving error). Thanks Stephanie

2011-07-27  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdialogs.R (galert): When parent is a gwindow instance, this
	dialog now uses a GtkInfoBar instance. Requires gWidgets 0.0-46 or later.

2011-07-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdialogs.R (gbasicdialgo): Added do.buttons argument when run
	with no widget (preferred way).

2011-07-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/glayout.R (as.gWidgetsRGtk2.GtkTable): fixed bug in dimension

2011-07-13  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* DESCRIPTION (Version): version bump 

2011-07-12  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gedit.R (.setCompletion): fixed visible<- method for password
	use, fixed intial.msg and svalue issue

2011-06-25  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtext.R (.addTags): reworked fonts. Graham W pointed out
	slowness and this makes much more sense.

2011-05-13  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aacR5Classes.R: changed class of function to ANY, not function
	so that proto objects will work. (Thanks Yvonnick and Gabor)

2011-05-03  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggrid.R: fixed bug with svalue<- method

	* R/aacR5Classes.R: argument checked added to block_ovserver for R5 widgets

2011-04-22  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aacR5Classes.R: removed sapply with lapply calls. Changes in
	2.13 to sapply (actually call to simplify2array) cause
	issues. (Thanks Stephanie)
