@@ -5,6 +5,7 @@ Dear Emacs, please make this -*-Text-*- mode!
 Changes for version 0.0-77
 --------------------------
  
+* fix to gdf and do.subset=TRUE. (Thanks Stephanie)
 
 
 Changes for version 0.0-76
